vbnc/vbnc/tests/Errors/30205-2.vb
Public Class SomeClass

	Public Property AutoPropNewInit As New String("Init") = "ABC"

End Class
